# py-ocr

./: ocr_pdf_to_txt.py  ocr_png_to_txt.py  pyproject.toml
